--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/youtubecp.png" class="img-responsive" alt="Circus tent">
+                        <img src="https://www.fullertonmarkets.com/hubfs/forex_trading_online_investment.jpg" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
