--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.6435-9/67189326_495874617826258_555971477673869312_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=174925&_nc_ohc=INT82-dLAjwAX_cXpMF&_nc_ht=scontent-sjc3-1.xx&oh=604e926c0bfcc2696b7389cda64021ed&oe=61D78996" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
                         <h1 class="name">Hey Mike G {{name}}!</h1>
                         <hr class="star-light">
